fixed overflow problems

--- a/src/styles/bento.css
+++ b/src/styles/bento.css
@@ -21,7 +21,7 @@
     border-radius: 2em;
     max-height: 100%;
     max-width: 100%;
-    /* border: 2px solid red; */
+    border: 2px solid red;
     visibility: hidden;
     position: relative;
 }
@@ -32,7 +32,7 @@
     gap: 1em;
     max-width: 100%;
     max-height: 100%; /* Prevents the column from expanding */
-    overflow: hidden;
+    overflow: auto;
 }
 
 .flex-row{
@@ -41,7 +41,7 @@
     gap: 1em;
     max-width: 100%;
     max-height: 100%; /* Prevents the column from expanding */
-    overflow: hidden; 
+    overflow: auto; 
 }
 
 /* bento hierarchy */
